# ChangeLog for app-emacs/auctex
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/auctex/ChangeLog,v 1.94 2009/05/05 07:49:25 fauli Exp $

  05 May 2009; Christian Faulhammer <fauli@gentoo.org> auctex-11.85.ebuild:
  set explicit RDEPEND

  28 Nov 2008; Ulrich Mueller <ulm@gentoo.org> auctex-11.85.ebuild:
  Fix Info dir entry.

  28 Jul 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add USE flag description to metadata wrt GLEP 56.

  06 May 2008; Christian Faulhammer <opfer@gentoo.org>
  -files/auctex-11.84-configure.diff, -files/auctex-11.84-japanes.patch,
  -auctex-11.84-r3.ebuild:
  clean up

  05 May 2008; Markus Meier <maekke@gentoo.org> auctex-11.85.ebuild:
  amd64 stable, bug #213992

  18 Apr 2008; Ulrich Mueller <ulm@gentoo.org> auctex-11.85.ebuild:
  Parallel install does not work, bug 213992 comment 5.

  23 Mar 2008; Brent Baude <ranger@gentoo.org> auctex-11.85.ebuild:
  stable ppc64, bug 213992

  22 Mar 2008; Raúl Porcel <armin76@gentoo.org> auctex-11.85.ebuild:
  sparc stable wrt #213992

  22 Mar 2008; nixnut <nixnut@gentoo.org> auctex-11.85.ebuild:
  Stable on ppc wrt bug 213992

  21 Mar 2008; Christian Faulhammer <opfer@gentoo.org> auctex-11.85.ebuild:
  stable x86, bug 213992

  20 Mar 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add longdescription to metadata.

*auctex-11.85 (11 Feb 2008)

  11 Feb 2008; Christian Faulhammer <opfer@gentoo.org> +auctex-11.85.ebuild:
  version bump: Only some bug fixes (make the japanese patch obsolete e.g.);
  move DEPEND to virtual/latex-base, remove fix for Emacs 23, it seems to work
  without the patch now by forcing EMACS_FLAVOR

  11 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  +files/50auctex-gentoo.el, -files/52auctex-gentoo.el:
  readd previously deleted file and clean out correct one

  11 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  -files/50auctex-gentoo.el, -auctex-11.84-r2.ebuild:
  clean up
