@@ -1,6 +1,6 @@
 AUX 50auctex-gentoo.el 157 RMD160 7202a2c54b556987219f81f7ca29c735946e1a90 SHA1 e2d6f1145b48286facadbe33cbbba2bcda53e8c9 SHA256 ee6df844f12c72a9865f10ca7c25daf06ef64125c302de670aa1ba250a569fe5
 AUX 60auctex-gentoo.el 97 RMD160 cc04b10807e70d84fec9eca5559ea46f899f44a4 SHA1 1ad858370d33d7212410e55db568ca4548ab14e6 SHA256 3ff24a51655c0c8966119a70a68814ad4590553750b5a6545c33ba18c042934a
 DIST auctex-11.85.tar.gz 1051323 RMD160 b08e1de05af6d8e0384d7a3043328270767bc99b SHA1 5b4ab3fbbe784f43118e52cc31b93a183f84d89f SHA256 aebbea00431f8fd1e6be6519d9cc28e974942000737f956027da2c952a6d304e
-EBUILD auctex-11.85.ebuild 1834 RMD160 f5b9732fbbd89a354e53ed2294d9a05f6c0bb8b0 SHA1 a8ef7ca52d5192558ee4509db9dbd33da5c97c14 SHA256 962d1355e74b45ac7d58415d4f8fd6d70ae50928d17ba06d559bd2cddb429cd5
-MISC ChangeLog 13905 RMD160 5bc637fa796b939131abc48f84386fd153a0c8f6 SHA1 760d680bbd951751ccb1cea6878fa3da8d781516 SHA256 cca3355dfb8fe06523b3a983ae9e7a4379656baf6e9dc13d61426de04a6b2dd1
+EBUILD auctex-11.85.ebuild 1864 RMD160 914333f4ece1b2528d71a636eca398f737d30960 SHA1 5c6c914391963aafc1856e05347bf2535127b61b SHA256 fa71e57f686d170be447f40182737161c72933a26083aecf76f98f81057afd31
+MISC ChangeLog 14028 RMD160 f43b91008dfd1296055bb222a3393a0182f490ef SHA1 8f452826d2c5bd89c7f37359c86d2372e7f00e93 SHA256 823daef0ce3d5a3b033a10b8f566cbc6047c78c1fb2fbf104f57a06e64afde78
 MISC metadata.xml 732 RMD160 44b702f27e31280b8101aa173b16916ca9f52592 SHA1 8468553535733c806287ce3e1c236b819d76bc8b SHA256 5cd2a8eed95d63857b4af490dbd6a539f8745739e9f40fcda6f99811ceece380
